2016-01-08  Henry Butowsky  <henryb@hush.com>

	* ncap2 ncap_stats_wvariance(var,weight) set mss_val in weight to missing values in var

2016-01-07  Charlie Zender  <zender@uci.edu>

	* Fix typos caught by Debian lint from Bas Couwenberg

	* NCO 4.5.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.4 final changes';git push
	git tag -a 4.5.4 -m 'Version 4.5.4 new features: ncremap fix ncpdq nfr cap, XML _Unsigned, crv dateline, GSL2';git push --tags

2016-01-04  Charlie Zender  <zender@uci.edu>

	* Change copyright year to 2016

2016-01-04  Henry Butowsky  <henryb@hush.com>

	* Add sum() as synonym for total() in ncap2 aggregate methods

	* ncap2 method ncap_stats_wvariance(var,weight)	conforms wgt to var

2016-01-03  Henry Butowsky  <henryb@hush.com>

	* First-cut of custom method weighted variance for Christine smit v=ncap_stats_wvariance(var,weight)

2016-01-01  Charlie Zender  <zender@uci.edu>

	* Complete ncremap documentation, including limitations

	* ncremap recover gracefully from Tempest failures (false negative return codes)

	* Implement -E and -T for ESMF and TempestRemap options

	* Remove --src/dst_regional switches from ESMF default

	* Change default ESMF interpolation algorithm from bilinear to conserve

2015-12-31  Charlie Zender  <zender@uci.edu>

	* Add ncremap TempestRemap option with -w 'tempest'

	* NCO 4.5.4-beta04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.4-beta04 final changes';git push
	git tag -a 4.5.4-beta04 -m 'Version 4.5.4-beta04 new features: ncremap solidity';git push --tags

	* Barrage of tweaks to give ncremap sensible defaults on non-CSZ machines

	* Add ncremap -M mlt_map_flg toggle switch, clean-up examples, finish documentation

2015-12-30  Charlie Zender  <zender@uci.edu>

	* Support specifying source grid instead of inferring from source file

	* Re-arrange ncremap options again, use -i for in_fl, -s for src_grd

	* Add MODIS L2 coordinate information to usual suspects database
