@@ -1,3 +1,8 @@
+2016-01-13  Charlie Zender  <zender@uci.edu>
+
+	* Add new lat,lon,col dimension and coordinate names for TRMM, GPM, AMSR, OCO2:
+	sounding_id,Latitude,Longitude,nscan,npix,npixel,S1_Latitude,S1_Longitude
+
 2016-01-08  Henry Butowsky  <henryb@hush.com>
 
 	* ncap2 ncap_stats_wvariance(var,weight) set mss_val in weight to missing values in var
